----------------------------------------------------------------------
 OmegaT 4.1.1
----------------------------------------------------------------------
  7 Enhancements
  1 Bug fix
  7 Localisation updates
----------------------------------------------------------------------
4.1.1 vs 4.1.0

  Implemented requests:

  - Improve validation feedback when editing External Search items
  https://sourceforge.net/p/omegat/feature-requests/1303/

  - Additional parameter for neural net translation on Google translate
  https://sourceforge.net/p/omegat/feature-requests/1291/

  - Support new Azure-based Microsoft Translator API for MT
  https://sourceforge.net/p/omegat/feature-requests/1280/

  - Disable project-specific external search commands by default
  https://sourceforge.net/p/omegat/feature-requests/1304/

  - Change PO fuzzies default match % to 60% 
  https://sourceforge.net/p/omegat/feature-requests/1258/

  Other changes:

  - External Search menu items are split into nested submenus of 10 items to
accommodate users with numerous item definitions.

  Bug fixes:

  - Wrong icon displayed when OmegaT is minimized in the OS X dock
  https://sourceforge.net/p/omegat/bugs/850/

  Localisation Updates:

  - Belarusian localisation updated to 4.0 (UI, documentation, scripts, readme)
  - Dutch localisation updated to 4.0 (UI, documentation, scripts, readme)
  - Italian localisation updated to 4.1.0 (UI, documentation)
  - Polish localisation updated to 4.0.0 (UI, readme, scripts)
  - Brazilian Portuguese updated to 3.6 (UI, documentation, scripts, readme)
  - Spanish localisation updated to 4.0.0 (UI, tutorial)
  - Traditional Chinese (TW) localisation updated to 4.0 (UI)

----------------------------------------------------------------------
 OmegaT 4.1.0 (2017-01-09)
----------------------------------------------------------------------
  9 Enhancements
  4 Bug fixes
  2 Localisation updates
----------------------------------------------------------------------